[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threat-intel-enrich"
version = "0.1.0"
description = "CLI tool for enriching security indicators against multiple threat intelligence sources"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Idrak", email = "" },
]
keywords = ["security", "threat-intelligence", "cli", "virustotal", "abuseipdb", "ioc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet",
]
dependencies = [
    "click>=8.1",
    "aiohttp>=3.9",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/idrak/threat-intel-enrich"
Repository = "https://github.com/idrak/threat-intel-enrich"
"Bug Tracker" = "https://github.com/idrak/threat-intel-enrich/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4",
]

[project.scripts]
enrich = "enricher.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/enricher"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
